intTests/test_type_errors/err009.log.good
Loading file "err009.saw"
Type errors:
  err009.saw:4:1-4:44: Monadic bind with the wrong monad; found LLVMSetup but expected TopLevel
  err009.saw:4:1-4:44: This creates the action but does not execute it; if you meant to do that, prefix the expression with return

FAILED
